[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Explosion.png" type="Texture" id=1]
[ext_resource path="res://GlowWorldEnvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/EnemyExplosion.gd" type="Script" id=3]
[ext_resource path="res://Scenes/EnemyExplosionParts.tres" type="Material" id=4]
[ext_resource path="res://Scenes/EnemyExplosionHot.tres" type="Material" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[node name="EnemyExplosion" type="AnimatedSprite"]
self_modulate = Color( 1.7, 1.5, 1.5, 1 )
position = Vector2( 256, 150 )
frames = SubResource( 11 )
script = ExtResource( 3 )

[node name="HotParticles" type="Particles2D" parent="."]
modulate = Color( 1.5, 1, 1, 1 )
emitting = false
amount = 14
lifetime = 1.8
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
process_material = ExtResource( 5 )

[node name="ExplosionParticlesParts" type="Particles2D" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
emitting = false
amount = 10
one_shot = true
speed_scale = 2.0
explosiveness = 0.9
process_material = ExtResource( 4 )

[node name="ResetTimer" type="Timer" parent="."]
autostart = true

[node name="WorldEnvironment" parent="." instance=ExtResource( 2 )]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
